--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ section + section {
   margin-bottom: 22px;
   line-height: 1.8;
   font-size: 18px;
+  font-style: italic;
   color: #5c3a21; /* soft brown */
 }
 
